feature | update chrome extension

--- a/browser-extensions/chrome/manifest.json
+++ b/browser-extensions/chrome/manifest.json
@@ -5,7 +5,8 @@
   "description": "Quickly create quicklinks from your browser",
   "homepage_url": "http://quicklinks.shub.club",
   "permissions": [
-    "tabs"
+    "tabs",
+    "*://localhost:1867/*"
   ],
   "browser_action": {
     "default_title": "browser action demo",
